--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,11 @@ select {
   border: 1px solid rgba(92, 102, 123, 0.2);
   border-radius: 32px;
   box-shadow: 1px 1px 10px 1px rgba(92, 102, 123, 0.04);
+  transition: all 0.5s ease;
+}
+
+.btn:hover {
+  transform: scale(0.9);
 }
 
 .currency-exchange-content {
@@ -158,7 +163,8 @@ select {
   }
 
   #currency-value {
-    height: 3rem;
+    height: 2.4rem;
+    font-size: 26px;
   }
 }
 
